Proposta de Tema v2.0

--- a/propostaDeTema.ipynb
+++ b/propostaDeTema.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "199e28fd",
+   "id": "00e92970",
    "metadata": {},
    "source": [
     "## Computação em Estatística 2 (2020/2)"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f08014b",
+   "id": "5e9db1c5",
    "metadata": {},
    "source": [
     "### Grupo:\n",
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "974ec7b9",
+   "id": "c37f363e",
    "metadata": {},
    "source": [
     "### Tema do trabalho\n",
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "508620e4",
+   "id": "51428295",
    "metadata": {},
    "source": [
     "### O objetivo do trabalho é descobrir o que ou descrever o que?"
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b061e5e",
+   "id": "23d775ec",
    "metadata": {},
    "source": [
     "O objetivo do trabalho é descrever as características das estatísticas dos dois jogadores, demonstrar em gráficos, fazer comparações, testes e talvez chegar a alguma conclusão relevante."
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8b586d6",
+   "id": "5259d40f",
    "metadata": {},
    "source": [
     "### Quais conjuntos de dados serão utilizados e suas fontes."
@@ -55,15 +55,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0639ac8",
+   "id": "0663fd5f",
    "metadata": {},
    "source": [
-    "Serão utilizados os dados dos jogadores em cada partida que atuaram e também os dados condensados da carreira por temporada. Os dados foram obtidos da própria NBA através do site stats.nba.com, utilizando o pacote python nba_api"
+    "Serão utilizados os dados dos jogadores em cada partida que atuaram e também os dados condensados da carreira por temporada. Os dados foram obtidos da própria NBA através do site stats.nba.com, utilizando o pacote python nba_api\n",
+    "<br/><br/>\n",
+    "Arquivos de dados e script de extração em https://github.com/Hermezilla/trabalhoCE2"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "e2eab6a2",
+   "id": "5d570bd4",
    "metadata": {},
    "source": [
     "### Qual a dimensão dos dados? (Quantas linhas ou registros e quantas colunas ou variáveis?)"
@@ -71,7 +73,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e2593de",
+   "id": "f478fc2f",
    "metadata": {},
    "source": [
     "Até o dia 22/04/2021 pela manhã:\n",
@@ -83,7 +85,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a5a5a21",
+   "id": "a24e9e24",
    "metadata": {},
    "source": [
     "### Cite ao menos 3 variáveis de relevância e suas classificações"
@@ -91,7 +93,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6ed9f92",
+   "id": "f56a61f0",
    "metadata": {},
    "source": [
     "- SEASON: Qualitativa Ordinal\n",
@@ -105,28 +107,7 @@
     "- REB: Quantitativa Discreta\n",
     "- AST: Quantitativa Discreta\n",
     "- TOV: Quantitativa Discreta\n",
-    "- PLUS_MINUS: \n",
-    "\n",
-    "1306 non-null   int64  \n",
-    " 10  FGM                1306 non-null   int64  \n",
-    " 11  FGA                1306 non-null   int64  \n",
-    " 12  FG_PCT             1306 non-null   float64\n",
-    " 13  FG3M               1306 non-null   int64  \n",
-    " 14  FG3A               1306 non-null   int64  \n",
-    " 15  FG3_PCT            1266 non-null   float64\n",
-    " 16  FTM                1306 non-null   int64  \n",
-    " 17  FTA                1306 non-null   int64  \n",
-    " 18  FT_PCT             1292 non-null   float64\n",
-    " 19  OREB               1306 non-null   int64  \n",
-    " 20  DREB               1306 non-null   int64  \n",
-    " 21  REB                1306 non-null   int64  \n",
-    " 22  AST                1306 non-null   int64  \n",
-    " 23  STL                1306 non-null   int64  \n",
-    " 24  BLK                1306 non-null   int64  \n",
-    " 25  TOV                1306 non-null   int64  \n",
-    " 26  PF                 1306 non-null   int64  \n",
-    " 27  PLUS_MINUS         1306 non-null   float64\n",
-    " 28  HOME               1306 non-null   bool   \n"
+    "- PLUS_MINUS: Quantitativa Discreta"
    ]
   }
  ],
